Simplify CollectionUtils with Java 17 syntax.
Replace java.util.stream.StreamSupport with Elements StreamUtils.